--- a/apps/core/package.json
+++ b/apps/core/package.json
@@ -26,6 +26,7 @@
     "wrangler": "^3.58.0"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.0.5",
     "@bull-board/hono": "^5.21.1",
     "@hono/trpc-server": "^0.3.1",
     "@langchain/core": "^0.2.0",
@@ -36,6 +37,7 @@
     "@trpc/client": "^10.29.1",
     "@trpc/server": "^10.29.1",
     "@zilliz/milvus2-sdk-node": "2.3.5",
+    "ai": "^4.0.13",
     "axios": "^1.7.7",
     "bullmq": "^5.10.3",
     "cheerio": "^1.0.0",
