--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -60,7 +60,7 @@
     "date-fns": "^3.6.0",
     "electric-sql": "^0.11.3",
     "input-otp": "^1.2.4",
-    "lucide-react": "^0.378.0",
+    "lucide-react": "^0.468.0",
     "next-themes": "^0.3.0",
     "posthog-js": "^1.140.1",
     "react": "^18.2.0",
@@ -71,6 +71,7 @@
     "react-hook-form": "^7.52.0",
     "react-markdown": "^9.0.1",
     "reactflow": "^11.11.3",
+    "recharts": "^2.14.1",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.4.41",
     "supertokens-web-js": "^0.12.0",
