--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^4.8.1",
     "@trpc/server": "^10.45.2",
     "ai": "^3.3.21",
+    "better-auth": "^1.1.6",
     "cohere-ai": "^7.10.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
