--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,7 +8,10 @@
     "start:prod": "NODE_ENV=production bun run src/index.ts"
   },
   "dependencies": {
+    "@ai-sdk/deepseek": "^0.1.2",
     "@ai-sdk/openai": "^0.0.54",
+    "@hono/node-server": "^1.13.7",
+    "@hono/trpc-server": "^0.3.4",
     "@langchain/cohere": "^0.1.0",
     "@langchain/community": "^0.2.11",
     "@langchain/core": "^0.2.18",
@@ -16,7 +19,7 @@
     "@langchain/openai": "^0.2.5",
     "@prisma/client": "^4.8.1",
     "@trpc/server": "^10.45.2",
-    "ai": "^3.3.21",
+    "ai": "^4.1.2",
     "better-auth": "^1.1.6",
     "cohere-ai": "^7.10.6",
     "cors": "^2.8.5",
