--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,12 +23,14 @@
     "better-auth": "^1.1.6",
     "cohere-ai": "^7.10.6",
     "cors": "^2.8.5",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.1",
     "electric-sql": "^0.11.3",
     "express": "^4.19.2",
     "hono": "^4.4.4",
     "langchain": "^0.2.11",
+    "node-xlsx": "^0.24.0",
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
     "prisma": "^4.8.1",
